<resources>
    <!-- Global -->
    <string name="app_name">ViDance</string>
    <string name="placeholder">placeholder</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- Menu Items -->
    <string name="contact">
        -To be updated- \n\n
        Android application related questions: \n\n
        Michelle Chung Chai Ying \n4316916@students.swinburne.edu.my \n\n
        Database / Server related questions: \n\n
        Danil Shepelev \n100063197@students.swinburne.edu.my \n\n\n\n
        Website related questions: \n\n
        Mohammad Ibrahim Khan \n4300815@students.swinburne.edu.my
    </string>
    <string name="about">ViDance is a Dance and Learn application made for special children with the intention of sharing videos with instructors and storing with ease their behaviours shown.</string>

    <!-- Login/Reg -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="hint_reg_username">Username (4~16 characters)</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_reg_password">Password (6~20 characters)</string>
    <string name="hint_cfmPassword">Confirm Password </string>
    <string name="hint_email">E-mail  (Ex: yourname@gmail.com)</string>
    <string name="hint_cname">Child Name</string>
    <string name="hint_cAge">Child Age</string>
    <string name="gender">Child Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="btn_link_to_skip">Skip Log In</string>
    <string name="btn_link_to_login">Already registered! Log me in</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="skip">Skip this step.</string>

    <!-- Titles -->
    <string name="title_activity_features">Features</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_input">Update Behaviours</string>
    <string name="title_target">Target Behaviours</string>
    <string name="title_record">Record Session</string>
    <string name="title_report">Generate Report</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu -->
    <string name="action_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>

    <!-- Camera -->
    <string name="camera_record">Record video</string>
    <string name="video_send">
        Send video \n
        (Max file size: 64MB)
    </string>
    <string name="video_download">Download video</string>

    <!-- Gallery -->
    <string name="frmGallery">My Recorded\nVideos</string>
    <string name="frmUser">My Uploaded\nVideos</string>
    <string name="frmInstruct">My Social\nStories</string>
    <string name="fullscreen">View in Fullscreen</string>

    <!-- Input Form -->
    <string name="selectDate">Select a date</string>
    <string name="selectTime">Select start time</string>
    <string name="input_instructions">Select a behaviour, severity, date and time.</string>
    <string name="severity">Select Severity:</string>
    <string name="severity_mild">Mild</string>
    <string name="severity_moderate">Moderate</string>
    <string name="severity_severe">Severe</string>
    <string name="show_severity">Show Severity Information</string>
    <string name="hide_severity">Hide Severity Information</string>
    <string name="behaviour">Select Behaviour:</string>

    <!-- Default button values (inside Generate Report) -->
    <string name="day">Day</string>
    <string name="first_day">First Day</string>
    <string name="end_day">End Day</string>
    <string name="week">First day of week</string>
    <string name="month">First day of month</string>
    <string name="amount"></string>
    <string name="times"> time(s)</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="show_report">Show Report</string>
    <string name="hint">Hint</string>

    <!-- Total chart options -->
    <string name="by_behaviour">By Behaviour</string>
    <string name="by_severity">By Severity</string>

    <!-- Report -->
    <string name="num_behaviours">Severities per behaviour</string>
    <string name="num_severities">Severities over time</string>
    <string name="total">Total</string>
    <string name="chart1desc">First graph will show number of severities and its behaviours over time</string>
    <string name="chart2desc">Second graph will show number of severities for particular period time</string>
    <string name="chart3desc">Third graph combines filter by behaviour and by severity to show all your filtered records</string>

    <!-- Behaviour Severity Information -->
    <string name="severity_info">
        For self injurious behaviours:
        \n \n
        Definition: Self-injurious behavior (SIB) causes damage to the person’s own body; i.e., damage has either already occurred, or it must be expected if the behavior remained untreated. SIBs occur repeatedly in the same way over and over again, and they are characteristic for that person. (So on the list I gave you, that would be until "teeth grinding")
        \n \n
        Mild - Behavior occurs but does not inflict significant damage on the individual (e.g., temporary reddening of the skin, very light bruising).
        \n \n
        Moderate - Behavior may inflict moderate damage on the individual (e.g., moderate bruising, scratching through the skin, repeatedly picking scabs.
        \n \n
        Severe - Behavior may inflict moderate to severe damage on the individual (e.g. biting through the skin, eye gouging, fracturing bones) minor or major medical intervention required.
        \n \n
        \n
        For stereotyped behaviours:
        \n \n
        Definition: Stereotyped behaviors look unusual, strange, or inappropriate to the average person. They are voluntary acts that occur repeatedly in the same way over and over again, and they are characteristic for that person. However, they do NOT cause physical damage.
        \n \n
        Mild - Does not get upset if interrupted, does not get in the way of ongoing events
        \n \n
        Moderate - May exhibit distress if interrupted, sometimes gets in the way of ongoing events
        \n \n
        Severe - Exhibits much distress if interrupted, gets in the way of ongoing events
    </string>
</resources>
