<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Child">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/catcafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Please register a new child."
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/child"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:hint="@string/hint_cname"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="#222222"
            android:textColorHint="#999999" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#a1e8e4"
            android:text="@string/btn_register"
            android:textColor="@color/colorPrimaryDark" />



        <Button
            android:id="@+id/btnButtonToSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@null"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>